--- a/API/appsettings.Development.json
+++ b/API/appsettings.Development.json
@@ -1,8 +1,5 @@
 {
-  "Logging": {
-    "LogLevel": {
-      "Default": "Information",
-      "Microsoft.AspNetCore": "Warning"
-    }
+  "ConnectionStrings": {
+    "DefaultConnections": "Data Source=DESKTOP-HU9MG9J; Initial Catalog=Tokenizadora; User Id=sa; Password=qwe123; TrustServerCertificate=True"
   }
 }
